# cmake-demo

Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt
Step5/: CMakeLists.txt
Step5/MathFunctions/: CMakeLists.txt
